MyC/MyC/y.output
Terminaux inutilisés dans la grammaire

    DOT
    ARR


Grammaire

    0 $accept: prog $end

    1 prog: glob_decl_list

    2 glob_decl_list: glob_var_list glob_fun_list

    3 glob_var_list: glob_var_list decl PV
    4              | ε

    5 glob_fun_list: glob_fun_list fun
    6              | fun

    7 fun: type fun_head fun_body

    8 po: PO

    9 fun_head: ID po PF
   10         | ID po params PF

   11 params: type ID vir params
   12       | type ID

   13 vir: VIR

   14 fun_body: fao block faf

   15 fao: AO

   16 faf: AF

   17 block: decl_list inst_list

   18 decl_list: decl_list decl PV
   19          | ε

   20 decl: var_decl

   21 var_decl: type vlist

   22 vlist: vlist vir ID
   23      | ID

   24 type: typename

   25 typename: INT
   26         | FLOAT
   27         | VOID

   28 inst_list: inst_list inst
   29          | inst

   30 pv: PV

   31 inst: ao block af
   32     | exp pv
   33     | aff pv
   34     | ret pv
   35     | cond
   36     | loop
   37     | pv

   38 ao: AO

   39 af: AF

   40 aff: ID EQ exp

   41 ret: RETURN exp
   42    | RETURN PO PF

   43 cond: if bool_cond inst elsop

   44 elsop: else inst
   45      | ε

   46 bool_cond: PO exp PF

   47 if: IF

   48 else: ELSE

   49 loop: while while_cond inst

   50 while_cond: PO exp PF

   51 while: WHILE

   52 exp: MOINS exp
   53    | exp PLUS exp
   54    | exp MOINS exp
   55    | exp STAR exp
   56    | exp DIV exp
   57    | PO exp PF
   58    | ID
   59    | app
   60    | NUM
   61    | DEC
   62    | NOT exp
   63    | exp INF exp
   64    | exp SUP exp
   65    | exp EQUAL exp
   66    | exp DIFF exp
   67    | exp AND exp
   68    | exp OR exp

   69 app: fid PO args PF

   70 fid: ID

   71 args: arglist
   72     | ε

   73 arglist: arglist VIR exp
   74        | exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    NUM <int_value> (258) 60
    DEC <float_value> (259) 61
    INT (260) 25
    FLOAT (261) 26
    VOID (262) 27
    ID <string_value> (263) 9 10 11 12 22 23 40 58 70
    AO (264) 15 38
    AF (265) 16 39
    PO (266) 8 42 46 50 57 69
    PF (267) 9 10 42 46 50 57 69
    PV (268) 3 18 30
    VIR (269) 13 73
    RETURN (270) 41 42
    EQ (271) 40
    IF <label_value> (272) 47
    ELSE <label_value> (273) 48
    WHILE <label_value> (274) 51
    AND <label_value> (275) 67
    OR <label_value> (276) 68
    NOT <label_value> (277) 62
    DIFF <label_value> (278) 66
    EQUAL <label_value> (279) 65
    SUP <label_value> (280) 64
    INF <label_value> (281) 63
    PLUS (282) 53
    MOINS (283) 52 54
    STAR (284) 55
    DIV (285) 56
    DOT (286)
    ARR (287)
    IFX (288)
    UNA (289)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (35)
        à gauche: 0
    prog (36)
        à gauche: 1
        à droite: 0
    glob_decl_list (37)
        à gauche: 2
        à droite: 1
    glob_var_list (38)
        à gauche: 3 4
        à droite: 2 3
    glob_fun_list (39)
        à gauche: 5 6
        à droite: 2 5
    fun (40)
        à gauche: 7
        à droite: 5 6
    po (41)
        à gauche: 8
        à droite: 9 10
    fun_head <string_value> (42)
        à gauche: 9 10
        à droite: 7
    params (43)
        à gauche: 11 12
        à droite: 10 11
    vir (44)
        à gauche: 13
        à droite: 11 22
    fun_body (45)
        à gauche: 14
        à droite: 7
    fao (46)
        à gauche: 15
        à droite: 14
    faf (47)
        à gauche: 16
        à droite: 14
    block (48)
        à gauche: 17
        à droite: 14 31
    decl_list (49)
        à gauche: 18 19
        à droite: 17 18
    decl (50)
        à gauche: 20
        à droite: 3 18
    var_decl (51)
        à gauche: 21
        à droite: 20
    vlist (52)
        à gauche: 22 23
        à droite: 21 22
    type <type_value> (53)
        à gauche: 24
        à droite: 7 11 12 21
    typename <type_value> (54)
        à gauche: 25 26 27
        à droite: 24
    inst_list (55)
        à gauche: 28 29
        à droite: 17 28
    pv (56)
        à gauche: 30
        à droite: 32 33 34 37
    inst (57)
        à gauche: 31 32 33 34 35 36 37
        à droite: 28 29 43 44 49
    ao (58)
        à gauche: 38
        à droite: 31
    af (59)
        à gauche: 39
        à droite: 31
    aff (60)
        à gauche: 40
        à droite: 33
    ret (61)
        à gauche: 41 42
        à droite: 34
    cond (62)
        à gauche: 43
        à droite: 35
    elsop (63)
        à gauche: 44 45
        à droite: 43
    bool_cond (64)
        à gauche: 46
        à droite: 43
    if (65)
        à gauche: 47
        à droite: 43
    else (66)
        à gauche: 48
        à droite: 44
    loop (67)
        à gauche: 49
        à droite: 36
    while_cond (68)
        à gauche: 50
        à droite: 49
    while (69)
        à gauche: 51
        à droite: 49
    exp <type_value> (70)
        à gauche: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        à droite: 32 40 41 46 50 52 53 54 55 56 57 62 63 64 65 66 67 68 73 74
    app (71)
        à gauche: 69
        à droite: 59
    fid (72)
        à gauche: 70
        à droite: 69
    args (73)
        à gauche: 71 72
        à droite: 69
    arglist (74)
        à gauche: 73 74
        à droite: 71 73


État 0

    0 $accept: • prog $end

    $défaut  réduction par utilisation de la règle 4 (glob_var_list)

    prog            aller à l'état 1
    glob_decl_list  aller à l'état 2
    glob_var_list   aller à l'état 3


État 1

    0 $accept: prog • $end

    $end  décalage et aller à l'état 4


État 2

    1 prog: glob_decl_list •

    $défaut  réduction par utilisation de la règle 1 (prog)


État 3

    2 glob_decl_list: glob_var_list • glob_fun_list
    3 glob_var_list: glob_var_list • decl PV

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7

    glob_fun_list  aller à l'état 8
    fun            aller à l'état 9
    decl           aller à l'état 10
    var_decl       aller à l'état 11
    type           aller à l'état 12
    typename       aller à l'état 13


État 4

    0 $accept: prog $end •

    $défaut  accepter


État 5

   25 typename: INT •

    $défaut  réduction par utilisation de la règle 25 (typename)


État 6

   26 typename: FLOAT •

    $défaut  réduction par utilisation de la règle 26 (typename)


État 7

   27 typename: VOID •

    $défaut  réduction par utilisation de la règle 27 (typename)


État 8

    2 glob_decl_list: glob_var_list glob_fun_list •
    5 glob_fun_list: glob_fun_list • fun

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 2 (glob_decl_list)

    fun       aller à l'état 14
    type      aller à l'état 15
    typename  aller à l'état 13


État 9

    6 glob_fun_list: fun •

    $défaut  réduction par utilisation de la règle 6 (glob_fun_list)


État 10

    3 glob_var_list: glob_var_list decl • PV

    PV  décalage et aller à l'état 16


État 11

   20 decl: var_decl •

    $défaut  réduction par utilisation de la règle 20 (decl)


État 12

    7 fun: type • fun_head fun_body
   21 var_decl: type • vlist

    ID  décalage et aller à l'état 17

    fun_head  aller à l'état 18
    vlist     aller à l'état 19


État 13

   24 type: typename •

    $défaut  réduction par utilisation de la règle 24 (type)


État 14

    5 glob_fun_list: glob_fun_list fun •

    $défaut  réduction par utilisation de la règle 5 (glob_fun_list)


État 15

    7 fun: type • fun_head fun_body

    ID  décalage et aller à l'état 20

    fun_head  aller à l'état 18


État 16

    3 glob_var_list: glob_var_list decl PV •

    $défaut  réduction par utilisation de la règle 3 (glob_var_list)


État 17

    9 fun_head: ID • po PF
   10         | ID • po params PF
   23 vlist: ID •

    PO  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 23 (vlist)

    po  aller à l'état 22


État 18

    7 fun: type fun_head • fun_body

    AO  décalage et aller à l'état 23

    fun_body  aller à l'état 24
    fao       aller à l'état 25


État 19

   21 var_decl: type vlist •
   22 vlist: vlist • vir ID

    VIR  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 21 (var_decl)

    vir  aller à l'état 27


État 20

    9 fun_head: ID • po PF
   10         | ID • po params PF

    PO  décalage et aller à l'état 21

    po  aller à l'état 22


État 21

    8 po: PO •

    $défaut  réduction par utilisation de la règle 8 (po)


État 22

    9 fun_head: ID po • PF
   10         | ID po • params PF

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7
    PF     décalage et aller à l'état 28

    params    aller à l'état 29
    type      aller à l'état 30
    typename  aller à l'état 13


État 23

   15 fao: AO •

    $défaut  réduction par utilisation de la règle 15 (fao)


État 24

    7 fun: type fun_head fun_body •

    $défaut  réduction par utilisation de la règle 7 (fun)


État 25

   14 fun_body: fao • block faf

    $défaut  réduction par utilisation de la règle 19 (decl_list)

    block      aller à l'état 31
    decl_list  aller à l'état 32


État 26

   13 vir: VIR •

    $défaut  réduction par utilisation de la règle 13 (vir)


État 27

   22 vlist: vlist vir • ID

    ID  décalage et aller à l'état 33


État 28

    9 fun_head: ID po PF •

    $défaut  réduction par utilisation de la règle 9 (fun_head)


État 29

   10 fun_head: ID po params • PF

    PF  décalage et aller à l'état 34


État 30

   11 params: type • ID vir params
   12       | type • ID

    ID  décalage et aller à l'état 35


État 31

   14 fun_body: fao block • faf

    AF  décalage et aller à l'état 36

    faf  aller à l'état 37


État 32

   17 block: decl_list • inst_list
   18 decl_list: decl_list • decl PV

    NUM     décalage et aller à l'état 38
    DEC     décalage et aller à l'état 39
    INT     décalage et aller à l'état 5
    FLOAT   décalage et aller à l'état 6
    VOID    décalage et aller à l'état 7
    ID      décalage et aller à l'état 40
    AO      décalage et aller à l'état 41
    PO      décalage et aller à l'état 42
    PV      décalage et aller à l'état 43
    RETURN  décalage et aller à l'état 44
    IF      décalage et aller à l'état 45
    WHILE   décalage et aller à l'état 46
    NOT     décalage et aller à l'état 47
    MOINS   décalage et aller à l'état 48

    decl       aller à l'état 49
    var_decl   aller à l'état 11
    type       aller à l'état 50
    typename   aller à l'état 13
    inst_list  aller à l'état 51
    pv         aller à l'état 52
    inst       aller à l'état 53
    ao         aller à l'état 54
    aff        aller à l'état 55
    ret        aller à l'état 56
    cond       aller à l'état 57
    if         aller à l'état 58
    loop       aller à l'état 59
    while      aller à l'état 60
    exp        aller à l'état 61
    app        aller à l'état 62
    fid        aller à l'état 63


État 33

   22 vlist: vlist vir ID •

    $défaut  réduction par utilisation de la règle 22 (vlist)


État 34

   10 fun_head: ID po params PF •

    $défaut  réduction par utilisation de la règle 10 (fun_head)


État 35

   11 params: type ID • vir params
   12       | type ID •

    VIR  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 12 (params)

    vir  aller à l'état 64


État 36

   16 faf: AF •

    $défaut  réduction par utilisation de la règle 16 (faf)


État 37

   14 fun_body: fao block faf •

    $défaut  réduction par utilisation de la règle 14 (fun_body)


État 38

   60 exp: NUM •

    $défaut  réduction par utilisation de la règle 60 (exp)


État 39

   61 exp: DEC •

    $défaut  réduction par utilisation de la règle 61 (exp)


État 40

   40 aff: ID • EQ exp
   58 exp: ID •
   70 fid: ID •

    EQ  décalage et aller à l'état 65

    PO       réduction par utilisation de la règle 70 (fid)
    $défaut  réduction par utilisation de la règle 58 (exp)


État 41

   38 ao: AO •

    $défaut  réduction par utilisation de la règle 38 (ao)


État 42

   57 exp: PO • exp PF

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 67
    app  aller à l'état 62
    fid  aller à l'état 63


État 43

   30 pv: PV •

    $défaut  réduction par utilisation de la règle 30 (pv)


État 44

   41 ret: RETURN • exp
   42    | RETURN • PO PF

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 68
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 69
    app  aller à l'état 62
    fid  aller à l'état 63


État 45

   47 if: IF •

    $défaut  réduction par utilisation de la règle 47 (if)


État 46

   51 while: WHILE •

    $défaut  réduction par utilisation de la règle 51 (while)


État 47

   62 exp: NOT • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 70
    app  aller à l'état 62
    fid  aller à l'état 63


État 48

   52 exp: MOINS • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 71
    app  aller à l'état 62
    fid  aller à l'état 63


État 49

   18 decl_list: decl_list decl • PV

    PV  décalage et aller à l'état 72


État 50

   21 var_decl: type • vlist

    ID  décalage et aller à l'état 73

    vlist  aller à l'état 19


État 51

   17 block: decl_list inst_list •
   28 inst_list: inst_list • inst

    NUM     décalage et aller à l'état 38
    DEC     décalage et aller à l'état 39
    ID      décalage et aller à l'état 40
    AO      décalage et aller à l'état 41
    PO      décalage et aller à l'état 42
    PV      décalage et aller à l'état 43
    RETURN  décalage et aller à l'état 44
    IF      décalage et aller à l'état 45
    WHILE   décalage et aller à l'état 46
    NOT     décalage et aller à l'état 47
    MOINS   décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 17 (block)

    pv     aller à l'état 52
    inst   aller à l'état 74
    ao     aller à l'état 54
    aff    aller à l'état 55
    ret    aller à l'état 56
    cond   aller à l'état 57
    if     aller à l'état 58
    loop   aller à l'état 59
    while  aller à l'état 60
    exp    aller à l'état 61
    app    aller à l'état 62
    fid    aller à l'état 63


État 52

   37 inst: pv •

    $défaut  réduction par utilisation de la règle 37 (inst)


État 53

   29 inst_list: inst •

    $défaut  réduction par utilisation de la règle 29 (inst_list)


État 54

   31 inst: ao • block af

    $défaut  réduction par utilisation de la règle 19 (decl_list)

    block      aller à l'état 75
    decl_list  aller à l'état 32


État 55

   33 inst: aff • pv

    PV  décalage et aller à l'état 43

    pv  aller à l'état 76


État 56

   34 inst: ret • pv

    PV  décalage et aller à l'état 43

    pv  aller à l'état 77


État 57

   35 inst: cond •

    $défaut  réduction par utilisation de la règle 35 (inst)


État 58

   43 cond: if • bool_cond inst elsop

    PO  décalage et aller à l'état 78

    bool_cond  aller à l'état 79


État 59

   36 inst: loop •

    $défaut  réduction par utilisation de la règle 36 (inst)


État 60

   49 loop: while • while_cond inst

    PO  décalage et aller à l'état 80

    while_cond  aller à l'état 81


État 61

   32 inst: exp • pv
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PV     décalage et aller à l'état 43
    AND    décalage et aller à l'état 82
    OR     décalage et aller à l'état 83
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91

    pv  aller à l'état 92


État 62

   59 exp: app •

    $défaut  réduction par utilisation de la règle 59 (exp)


État 63

   69 app: fid • PO args PF

    PO  décalage et aller à l'état 93


État 64

   11 params: type ID vir • params

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7

    params    aller à l'état 94
    type      aller à l'état 30
    typename  aller à l'état 13


État 65

   40 aff: ID EQ • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 95
    app  aller à l'état 62
    fid  aller à l'état 63


État 66

   58 exp: ID •
   70 fid: ID •

    PO       réduction par utilisation de la règle 70 (fid)
    $défaut  réduction par utilisation de la règle 58 (exp)


État 67

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   57    | PO exp • PF
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PF     décalage et aller à l'état 96
    AND    décalage et aller à l'état 82
    OR     décalage et aller à l'état 83
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91


État 68

   42 ret: RETURN PO • PF
   57 exp: PO • exp PF

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    PF     décalage et aller à l'état 97
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 67
    app  aller à l'état 62
    fid  aller à l'état 63


État 69

   41 ret: RETURN exp •
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    AND    décalage et aller à l'état 82
    OR     décalage et aller à l'état 83
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 41 (ret)


État 70

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   62    | NOT exp •
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    $défaut  réduction par utilisation de la règle 62 (exp)


État 71

   52 exp: MOINS exp •
   53    | exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    $défaut  réduction par utilisation de la règle 52 (exp)


État 72

   18 decl_list: decl_list decl PV •

    $défaut  réduction par utilisation de la règle 18 (decl_list)


État 73

   23 vlist: ID •

    $défaut  réduction par utilisation de la règle 23 (vlist)


État 74

   28 inst_list: inst_list inst •

    $défaut  réduction par utilisation de la règle 28 (inst_list)


État 75

   31 inst: ao block • af

    AF  décalage et aller à l'état 98

    af  aller à l'état 99


État 76

   33 inst: aff pv •

    $défaut  réduction par utilisation de la règle 33 (inst)


État 77

   34 inst: ret pv •

    $défaut  réduction par utilisation de la règle 34 (inst)


État 78

   46 bool_cond: PO • exp PF

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 100
    app  aller à l'état 62
    fid  aller à l'état 63


État 79

   43 cond: if bool_cond • inst elsop

    NUM     décalage et aller à l'état 38
    DEC     décalage et aller à l'état 39
    ID      décalage et aller à l'état 40
    AO      décalage et aller à l'état 41
    PO      décalage et aller à l'état 42
    PV      décalage et aller à l'état 43
    RETURN  décalage et aller à l'état 44
    IF      décalage et aller à l'état 45
    WHILE   décalage et aller à l'état 46
    NOT     décalage et aller à l'état 47
    MOINS   décalage et aller à l'état 48

    pv     aller à l'état 52
    inst   aller à l'état 101
    ao     aller à l'état 54
    aff    aller à l'état 55
    ret    aller à l'état 56
    cond   aller à l'état 57
    if     aller à l'état 58
    loop   aller à l'état 59
    while  aller à l'état 60
    exp    aller à l'état 61
    app    aller à l'état 62
    fid    aller à l'état 63


État 80

   50 while_cond: PO • exp PF

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 102
    app  aller à l'état 62
    fid  aller à l'état 63


État 81

   49 loop: while while_cond • inst

    NUM     décalage et aller à l'état 38
    DEC     décalage et aller à l'état 39
    ID      décalage et aller à l'état 40
    AO      décalage et aller à l'état 41
    PO      décalage et aller à l'état 42
    PV      décalage et aller à l'état 43
    RETURN  décalage et aller à l'état 44
    IF      décalage et aller à l'état 45
    WHILE   décalage et aller à l'état 46
    NOT     décalage et aller à l'état 47
    MOINS   décalage et aller à l'état 48

    pv     aller à l'état 52
    inst   aller à l'état 103
    ao     aller à l'état 54
    aff    aller à l'état 55
    ret    aller à l'état 56
    cond   aller à l'état 57
    if     aller à l'état 58
    loop   aller à l'état 59
    while  aller à l'état 60
    exp    aller à l'état 61
    app    aller à l'état 62
    fid    aller à l'état 63


État 82

   67 exp: exp AND • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 104
    app  aller à l'état 62
    fid  aller à l'état 63


État 83

   68 exp: exp OR • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 105
    app  aller à l'état 62
    fid  aller à l'état 63


État 84

   66 exp: exp DIFF • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 106
    app  aller à l'état 62
    fid  aller à l'état 63


État 85

   65 exp: exp EQUAL • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 107
    app  aller à l'état 62
    fid  aller à l'état 63


État 86

   64 exp: exp SUP • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 108
    app  aller à l'état 62
    fid  aller à l'état 63


État 87

   63 exp: exp INF • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 109
    app  aller à l'état 62
    fid  aller à l'état 63


État 88

   53 exp: exp PLUS • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 110
    app  aller à l'état 62
    fid  aller à l'état 63


État 89

   54 exp: exp MOINS • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 111
    app  aller à l'état 62
    fid  aller à l'état 63


État 90

   55 exp: exp STAR • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 112
    app  aller à l'état 62
    fid  aller à l'état 63


État 91

   56 exp: exp DIV • exp

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    exp  aller à l'état 113
    app  aller à l'état 62
    fid  aller à l'état 63


État 92

   32 inst: exp pv •

    $défaut  réduction par utilisation de la règle 32 (inst)


État 93

   69 app: fid PO • args PF

    NUM    décalage et aller à l'état 38
    DEC    décalage et aller à l'état 39
    ID     décalage et aller à l'état 66
    PO     décalage et aller à l'état 42
    NOT    décalage et aller à l'état 47
    MOINS  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 72 (args)

    exp      aller à l'état 114
    app      aller à l'état 62
    fid      aller à l'état 63
    args     aller à l'état 115
    arglist  aller à l'état 116


État 94

   11 params: type ID vir params •

    $défaut  réduction par utilisation de la règle 11 (params)


État 95

   40 aff: ID EQ exp •
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    AND    décalage et aller à l'état 82
    OR     décalage et aller à l'état 83
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 40 (aff)


État 96

   57 exp: PO exp PF •

    $défaut  réduction par utilisation de la règle 57 (exp)


État 97

   42 ret: RETURN PO PF •

    $défaut  réduction par utilisation de la règle 42 (ret)


État 98

   39 af: AF •

    $défaut  réduction par utilisation de la règle 39 (af)


État 99

   31 inst: ao block af •

    $défaut  réduction par utilisation de la règle 31 (inst)


État 100

   46 bool_cond: PO exp • PF
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PF     décalage et aller à l'état 117
    AND    décalage et aller à l'état 82
    OR     décalage et aller à l'état 83
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91


État 101

   43 cond: if bool_cond inst • elsop

    ELSE  décalage et aller à l'état 118

    $défaut  réduction par utilisation de la règle 45 (elsop)

    elsop  aller à l'état 119
    else   aller à l'état 120


État 102

   50 while_cond: PO exp • PF
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PF     décalage et aller à l'état 121
    AND    décalage et aller à l'état 82
    OR     décalage et aller à l'état 83
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91


État 103

   49 loop: while while_cond inst •

    $défaut  réduction par utilisation de la règle 49 (loop)


État 104

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   67    | exp AND exp •
   68    | exp • OR exp

    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 67 (exp)


État 105

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp
   68    | exp OR exp •

    AND    décalage et aller à l'état 82
    DIFF   décalage et aller à l'état 84
    EQUAL  décalage et aller à l'état 85
    SUP    décalage et aller à l'état 86
    INF    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MOINS  décalage et aller à l'état 89
    STAR   décalage et aller à l'état 90
    DIV    décalage et aller à l'état 91
